# PythonML

./: Day1.md  Day2.md  Day3.md  Day4.md  Day5.md  README.md  main.py  pyproject.toml
data/: aapl.csv
files/: Choco_sales.ipynb  apple_stock.ipynb  customer_complaints.ipynb  data_download.py
