[project]
name = "pythonml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "llvmlite>=0.44,<0.45",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numba==0.61.2",
    "numpy<2.3",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
    "yfinance>=0.2.65",
]
